--- a/ga_sandbox/autom4te.cache/output.3
+++ b/ga_sandbox/autom4te.cache/output.3
@@ -5622,7 +5622,7 @@ else
 echo "${ECHO_T}Warning: couldn't find fltk library" >&6
 fi
 
-                                                            ac_config_files="$ac_config_files Makefile libgasandbox/Makefile chap2/Makefile chap2/ex1/Makefile chap2/ex2/Makefile chap2/ex3/Makefile"
+                                                                      ac_config_files="$ac_config_files Makefile vs.net/Makefile libgasandbox/Makefile chap2/Makefile chap2/ex1/Makefile chap2/ex2/Makefile chap2/ex3/Makefile"
 cat >confcache <<\_ACEOF
 # This file is a shell script that caches the results of configure
 # tests run on this system so they can be shared between configure
@@ -6206,6 +6206,7 @@ do
   case "$ac_config_target" in
   # Handling of arguments.
   "Makefile" ) CONFIG_FILES="$CONFIG_FILES Makefile" ;;
+  "vs.net/Makefile" ) CONFIG_FILES="$CONFIG_FILES vs.net/Makefile" ;;
   "libgasandbox/Makefile" ) CONFIG_FILES="$CONFIG_FILES libgasandbox/Makefile" ;;
   "chap2/Makefile" ) CONFIG_FILES="$CONFIG_FILES chap2/Makefile" ;;
   "chap2/ex1/Makefile" ) CONFIG_FILES="$CONFIG_FILES chap2/ex1/Makefile" ;;
