--- a/ga_sandbox/autom4te.cache/traces.1
+++ b/ga_sandbox/autom4te.cache/traces.1
@@ -194,13 +194,15 @@ aclocal.m4:749: MDL_HAVE_OPENGL is expanded from...
 configure.ac:7: the top level])
 m4trace:configure.ac:9: -1- AC_SUBST([AQSIS_FLTK_CFLAGS])
 m4trace:configure.ac:9: -1- AC_SUBST([AQSIS_FLTK_LIBS])
-m4trace:configure.ac:15: -1- AC_CONFIG_FILES([Makefile libgasandbox/Makefile \
-	chap2/Makefile 
+m4trace:configure.ac:18: -1- AC_CONFIG_FILES([Makefile \
+	vs.net/Makefile \
+	libgasandbox/Makefile \
+	chap2/Makefile \
 	chap2/ex1/Makefile\
 	chap2/ex2/Makefile\
 	chap2/ex3/Makefile\
 	])
-m4trace:configure.ac:15: -1- _m4_warn([obsolete], [AC_OUTPUT should be used without arguments.
+m4trace:configure.ac:18: -1- _m4_warn([obsolete], [AC_OUTPUT should be used without arguments.
 You should run autoupdate.], [])
-m4trace:configure.ac:15: -1- AC_SUBST([LIB@&t@OBJS], [$ac_libobjs])
-m4trace:configure.ac:15: -1- AC_SUBST([LTLIBOBJS], [$ac_ltlibobjs])
+m4trace:configure.ac:18: -1- AC_SUBST([LIB@&t@OBJS], [$ac_libobjs])
+m4trace:configure.ac:18: -1- AC_SUBST([LTLIBOBJS], [$ac_ltlibobjs])
