--- a/ga_sandbox/libgasandbox/.deps/gl_util.Po
+++ b/ga_sandbox/libgasandbox/.deps/gl_util.Po
@@ -1,12 +1,12 @@
-gl_util.o gl_util.o: gl_util.cpp /usr/include/GL/gl.h \
+gl_util.o gl_util.o: gl_util.cpp gl_util.h /usr/include/GL/gl.h \
   /usr/include/GL/glext.h \
   /usr/lib/gcc-lib/i686-pc-linux-gnu/3.3.5-20050130/include/stddef.h \
-  /usr/include/GL/glut.h /usr/include/GL/glu.h gl_util.h e3ga.h \
-  /usr/include/stdio.h /usr/include/features.h /usr/include/sys/cdefs.h \
-  /usr/include/gnu/stubs.h /usr/include/bits/types.h \
-  /usr/include/bits/wordsize.h /usr/include/bits/typesizes.h \
-  /usr/include/libio.h /usr/include/_G_config.h /usr/include/wchar.h \
-  /usr/include/bits/wchar.h /usr/include/gconv.h \
+  e3ga.h /usr/include/stdio.h /usr/include/features.h \
+  /usr/include/sys/cdefs.h /usr/include/gnu/stubs.h \
+  /usr/include/bits/types.h /usr/include/bits/wordsize.h \
+  /usr/include/bits/typesizes.h /usr/include/libio.h \
+  /usr/include/_G_config.h /usr/include/wchar.h /usr/include/bits/wchar.h \
+  /usr/include/gconv.h \
   /usr/lib/gcc-lib/i686-pc-linux-gnu/3.3.5-20050130/include/stdarg.h \
   /usr/include/bits/stdio_lim.h /usr/include/bits/sys_errlist.h \
   /usr/include/bits/stdio.h /usr/include/stdlib.h \
@@ -80,19 +80,15 @@ gl_util.o gl_util.o: gl_util.cpp /usr/include/GL/gl.h \
   /usr/lib/gcc-lib/i686-pc-linux-gnu/3.3.5-20050130/include/g++-v3/bits/stl_heap.h \
   /usr/lib/gcc-lib/i686-pc-linux-gnu/3.3.5-20050130/include/g++-v3/bits/stl_tempbuf.h \
   /usr/lib/gcc-lib/i686-pc-linux-gnu/3.3.5-20050130/include/g++-v3/bits/basic_string.tcc \
-  mvtypebase.h
+  mvtypebase.h /usr/include/GL/glut.h /usr/include/GL/glu.h
+
+gl_util.h:
 
 /usr/include/GL/gl.h:
 
 /usr/include/GL/glext.h:
 
 /usr/lib/gcc-lib/i686-pc-linux-gnu/3.3.5-20050130/include/stddef.h:
-
-/usr/include/GL/glut.h:
-
-/usr/include/GL/glu.h:
-
-gl_util.h:
 
 e3ga.h:
 
@@ -321,3 +317,7 @@ e3ga.h:
 /usr/lib/gcc-lib/i686-pc-linux-gnu/3.3.5-20050130/include/g++-v3/bits/basic_string.tcc:
 
 mvtypebase.h:
+
+/usr/include/GL/glut.h:
+
+/usr/include/GL/glu.h:
