Added ex3g2 (temp)

--- a/ga_sandbox/autom4te.cache/traces.1
+++ b/ga_sandbox/autom4te.cache/traces.1
@@ -192,8 +192,8 @@ autoconf/general.m4:1799: AC_CACHE_VAL is expanded from...
 autoconf/general.m4:1808: AC_CACHE_CHECK is expanded from...
 aclocal.m4:749: MDL_HAVE_OPENGL is expanded from...
 configure.ac:7: the top level])
-m4trace:configure.ac:9: -1- AC_SUBST([AQSIS_FLTK_CFLAGS])
-m4trace:configure.ac:9: -1- AC_SUBST([AQSIS_FLTK_LIBS])
+m4trace:configure.ac:8: -1- AC_SUBST([AQSIS_FLTK_CFLAGS])
+m4trace:configure.ac:8: -1- AC_SUBST([AQSIS_FLTK_LIBS])
 m4trace:configure.ac:18: -1- AC_CONFIG_FILES([Makefile \
 	vs.net/Makefile \
 	libgasandbox/Makefile \
@@ -201,6 +201,7 @@ m4trace:configure.ac:18: -1- AC_CONFIG_FILES([Makefile \
 	chap2/ex1/Makefile\
 	chap2/ex2/Makefile\
 	chap2/ex3/Makefile\
+	chap2/ex3g2/Makefile\
 	])
 m4trace:configure.ac:18: -1- _m4_warn([obsolete], [AC_OUTPUT should be used without arguments.
 You should run autoupdate.], [])
