--- a/ga_sandbox/autom4te.cache/traces.3
+++ b/ga_sandbox/autom4te.cache/traces.3
@@ -818,9 +818,9 @@ autoconf/general.m4:1799: AC_CACHE_VAL is expanded from...
 autoconf/general.m4:1808: AC_CACHE_CHECK is expanded from...
 /usr/share/aclocal-1.9/opengl.m4:92: MDL_HAVE_OPENGL is expanded from...
 configure.ac:7: the top level])
-m4trace:configure.ac:9: -1- AQSIS_CHECK_FLTK
-m4trace:configure.ac:9: -1- AC_SUBST([AQSIS_FLTK_CFLAGS])
-m4trace:configure.ac:9: -1- AC_SUBST([AQSIS_FLTK_LIBS])
+m4trace:configure.ac:8: -1- AQSIS_CHECK_FLTK
+m4trace:configure.ac:8: -1- AC_SUBST([AQSIS_FLTK_CFLAGS])
+m4trace:configure.ac:8: -1- AC_SUBST([AQSIS_FLTK_LIBS])
 m4trace:configure.ac:18: -1- AC_CONFIG_FILES([Makefile \
 	vs.net/Makefile \
 	libgasandbox/Makefile \
@@ -828,6 +828,7 @@ m4trace:configure.ac:18: -1- AC_CONFIG_FILES([Makefile \
 	chap2/ex1/Makefile\
 	chap2/ex2/Makefile\
 	chap2/ex3/Makefile\
+	chap2/ex3g2/Makefile\
 	])
 m4trace:configure.ac:18: -1- _m4_warn([obsolete], [AC_OUTPUT should be used without arguments.
 You should run autoupdate.], [])
