--- a/ga_sandbox/autom4te.cache/output.1
+++ b/ga_sandbox/autom4te.cache/output.1
@@ -5032,7 +5032,7 @@ ac_compiler_gnu=$ac_cv_c_compiler_gnu
 
 
 if test x"$no_x" != xyes; then
-  GL_CFLAGS="$X_CFLAGS"
+  GL_CFLAGS="$X_CFLAGS -I/opt/local/include"
   GL_X_LIBS="$X_PRE_LIBS $X_LIBS -lX11 -lXext -lXmu -lXt -lXi $X_EXTRA_LIBS"
 fi
     GL_save_CPPFLAGS="$CPPFLAGS"
@@ -5617,8 +5617,8 @@ if fltk-config --version >/dev/null 2>/dev/null; then
 	AQSIS_FLTK_VERSION=`fltk-config --version`
 	AQSIS_FLTK_CFLAGS=`fltk-config --cflags`
 	AQSIS_FLTK_LIBS=`fltk-config --ldflags`
-	AQSIS_FLTK_GL_CFLAGS=`fltk-config --cflags --use-gl`
-	AQSIS_FLTK_GL_LIBS=`fltk-config --ldflags --use-gl`
+        AQSIS_FLTK_GL_CFLAGS=`fltk-config --cflags --use-gl`
+        AQSIS_FLTK_GL_LIBS=`fltk-config --ldflags --use-gl`
 	echo "$as_me:$LINENO: result: found version $AQSIS_FLTK_VERSION" >&5
 echo "${ECHO_T}found version $AQSIS_FLTK_VERSION" >&6
 else
