Added linux/autoconf stuff

--- a/ga_sandbox/autom4te.cache/traces.3
+++ b/ga_sandbox/autom4te.cache/traces.3
@@ -827,7 +827,7 @@ m4trace:configure.ac:8: -1- AC_SUBST([AQSIS_FLTK_CFLAGS])
 m4trace:configure.ac:8: -1- AC_SUBST([AQSIS_FLTK_LIBS])
 m4trace:configure.ac:8: -1- AC_SUBST([AQSIS_FLTK_GL_CFLAGS])
 m4trace:configure.ac:8: -1- AC_SUBST([AQSIS_FLTK_GL_LIBS])
-m4trace:configure.ac:26: -1- AC_CONFIG_FILES([Makefile \
+m4trace:configure.ac:37: -1- AC_CONFIG_FILES([Makefile \
 	vs.net/Makefile \
 	\
 	libgasandbox/Makefile \
@@ -840,12 +840,23 @@ m4trace:configure.ac:26: -1- AC_CONFIG_FILES([Makefile \
 	chap3/Makefile \
 	chap3/ex1/Makefile\
 	chap3/ex2/Makefile\
+	chap3/ex3/Makefile\
+	chap3/ex4/Makefile\
+	\
+	chap4/Makefile \
+	chap4/ex1/Makefile \
+	\
+	chap5/Makefile \
+	\
+	chap6/Makefile \
+	\
+	chap7/Makefile \
 	\
 	attic/Makefile\
 	attic/gaigen2hp/Makefile
 	])
-m4trace:configure.ac:26: -1- _m4_warn([obsolete], [AC_OUTPUT should be used without arguments.
+m4trace:configure.ac:37: -1- _m4_warn([obsolete], [AC_OUTPUT should be used without arguments.
 You should run autoupdate.], [])
-m4trace:configure.ac:26: -1- AC_SUBST([LIB@&t@OBJS], [$ac_libobjs])
-m4trace:configure.ac:26: -1- AC_SUBST([LTLIBOBJS], [$ac_ltlibobjs])
-m4trace:configure.ac:26: -1- _AM_OUTPUT_DEPENDENCY_COMMANDS
+m4trace:configure.ac:37: -1- AC_SUBST([LIB@&t@OBJS], [$ac_libobjs])
+m4trace:configure.ac:37: -1- AC_SUBST([LTLIBOBJS], [$ac_ltlibobjs])
+m4trace:configure.ac:37: -1- _AM_OUTPUT_DEPENDENCY_COMMANDS
