--- a/ga_sandbox/autom4te.cache/traces.3
+++ b/ga_sandbox/autom4te.cache/traces.3
@@ -827,7 +827,7 @@ m4trace:configure.ac:8: -1- AC_SUBST([AQSIS_FLTK_CFLAGS])
 m4trace:configure.ac:8: -1- AC_SUBST([AQSIS_FLTK_LIBS])
 m4trace:configure.ac:8: -1- AC_SUBST([AQSIS_FLTK_GL_CFLAGS])
 m4trace:configure.ac:8: -1- AC_SUBST([AQSIS_FLTK_GL_LIBS])
-m4trace:configure.ac:37: -1- AC_CONFIG_FILES([Makefile \
+m4trace:configure.ac:39: -1- AC_CONFIG_FILES([Makefile \
 	vs.net/Makefile \
 	\
 	libgasandbox/Makefile \
@@ -845,6 +845,8 @@ m4trace:configure.ac:37: -1- AC_CONFIG_FILES([Makefile \
 	\
 	chap4/Makefile \
 	chap4/ex1/Makefile \
+	chap4/ex2/Makefile \
+	chap4/ex3/Makefile \
 	\
 	chap5/Makefile \
 	\
@@ -855,8 +857,8 @@ m4trace:configure.ac:37: -1- AC_CONFIG_FILES([Makefile \
 	attic/Makefile\
 	attic/gaigen2hp/Makefile
 	])
-m4trace:configure.ac:37: -1- _m4_warn([obsolete], [AC_OUTPUT should be used without arguments.
+m4trace:configure.ac:39: -1- _m4_warn([obsolete], [AC_OUTPUT should be used without arguments.
 You should run autoupdate.], [])
-m4trace:configure.ac:37: -1- AC_SUBST([LIB@&t@OBJS], [$ac_libobjs])
-m4trace:configure.ac:37: -1- AC_SUBST([LTLIBOBJS], [$ac_ltlibobjs])
-m4trace:configure.ac:37: -1- _AM_OUTPUT_DEPENDENCY_COMMANDS
+m4trace:configure.ac:39: -1- AC_SUBST([LIB@&t@OBJS], [$ac_libobjs])
+m4trace:configure.ac:39: -1- AC_SUBST([LTLIBOBJS], [$ac_ltlibobjs])
+m4trace:configure.ac:39: -1- _AM_OUTPUT_DEPENDENCY_COMMANDS
