--- a/ga_sandbox/autom4te.cache/traces.2
+++ b/ga_sandbox/autom4te.cache/traces.2
@@ -196,7 +196,7 @@ m4trace:configure.ac:8: -1- AC_SUBST([AQSIS_FLTK_CFLAGS])
 m4trace:configure.ac:8: -1- AC_SUBST([AQSIS_FLTK_LIBS])
 m4trace:configure.ac:8: -1- AC_SUBST([AQSIS_FLTK_GL_CFLAGS])
 m4trace:configure.ac:8: -1- AC_SUBST([AQSIS_FLTK_GL_LIBS])
-m4trace:configure.ac:39: -1- AC_CONFIG_FILES([Makefile \
+m4trace:configure.ac:42: -1- AC_CONFIG_FILES([Makefile \
 	vs.net/Makefile \
 	\
 	libgasandbox/Makefile \
@@ -218,6 +218,9 @@ m4trace:configure.ac:39: -1- AC_CONFIG_FILES([Makefile \
 	chap4/ex3/Makefile \
 	\
 	chap5/Makefile \
+	chap5/ex1/Makefile \
+	chap5/ex2/Makefile \
+	chap5/ex3/Makefile \
 	\
 	chap6/Makefile \
 	\
@@ -226,7 +229,7 @@ m4trace:configure.ac:39: -1- AC_CONFIG_FILES([Makefile \
 	attic/Makefile\
 	attic/gaigen2hp/Makefile
 	])
-m4trace:configure.ac:39: -1- _m4_warn([obsolete], [AC_OUTPUT should be used without arguments.
+m4trace:configure.ac:42: -1- _m4_warn([obsolete], [AC_OUTPUT should be used without arguments.
 You should run autoupdate.], [])
-m4trace:configure.ac:39: -1- AC_SUBST([LIB@&t@OBJS], [$ac_libobjs])
-m4trace:configure.ac:39: -1- AC_SUBST([LTLIBOBJS], [$ac_ltlibobjs])
+m4trace:configure.ac:42: -1- AC_SUBST([LIB@&t@OBJS], [$ac_libobjs])
+m4trace:configure.ac:42: -1- AC_SUBST([LTLIBOBJS], [$ac_ltlibobjs])
