--- a/ga_sandbox/autom4te.cache/traces.3
+++ b/ga_sandbox/autom4te.cache/traces.3
@@ -827,7 +827,7 @@ m4trace:configure.ac:8: -1- AC_SUBST([AQSIS_FLTK_CFLAGS])
 m4trace:configure.ac:8: -1- AC_SUBST([AQSIS_FLTK_LIBS])
 m4trace:configure.ac:8: -1- AC_SUBST([AQSIS_FLTK_GL_CFLAGS])
 m4trace:configure.ac:8: -1- AC_SUBST([AQSIS_FLTK_GL_LIBS])
-m4trace:configure.ac:42: -1- AC_CONFIG_FILES([Makefile \
+m4trace:configure.ac:58: -1- AC_CONFIG_FILES([Makefile \
 	vs.net/Makefile \
 	\
 	libgasandbox/Makefile \
@@ -854,14 +854,30 @@ m4trace:configure.ac:42: -1- AC_CONFIG_FILES([Makefile \
 	chap5/ex3/Makefile \
 	\
 	chap6/Makefile \
+	chap6/ex1/Makefile \
+	chap6/ex2/Makefile \
+	chap6/ex3/Makefile \
 	\
 	chap7/Makefile \
+	\
+	solutions/Makefile \
+	\
+	solutions/chap2/Makefile \
+	solutions/chap2/ex2/Makefile \
+	\
+	solutions/chap3/Makefile \
+	solutions/chap3/ex2/Makefile \
+	\
+	solutions/chap6/Makefile \
+	solutions/chap6/ex1/Makefile \
+	\
+	solutions/vs.net/Makefile \
 	\
 	attic/Makefile\
 	attic/gaigen2hp/Makefile
 	])
-m4trace:configure.ac:42: -1- _m4_warn([obsolete], [AC_OUTPUT should be used without arguments.
+m4trace:configure.ac:58: -1- _m4_warn([obsolete], [AC_OUTPUT should be used without arguments.
 You should run autoupdate.], [])
-m4trace:configure.ac:42: -1- AC_SUBST([LIB@&t@OBJS], [$ac_libobjs])
-m4trace:configure.ac:42: -1- AC_SUBST([LTLIBOBJS], [$ac_ltlibobjs])
-m4trace:configure.ac:42: -1- _AM_OUTPUT_DEPENDENCY_COMMANDS
+m4trace:configure.ac:58: -1- AC_SUBST([LIB@&t@OBJS], [$ac_libobjs])
+m4trace:configure.ac:58: -1- AC_SUBST([LTLIBOBJS], [$ac_ltlibobjs])
+m4trace:configure.ac:58: -1- _AM_OUTPUT_DEPENDENCY_COMMANDS
