Fixed/added a lot of autoconf stuff

--- a/ga_sandbox/autom4te.cache/traces.2
+++ b/ga_sandbox/autom4te.cache/traces.2
@@ -196,10 +196,13 @@ m4trace:configure.ac:8: -1- AC_SUBST([AQSIS_FLTK_CFLAGS])
 m4trace:configure.ac:8: -1- AC_SUBST([AQSIS_FLTK_LIBS])
 m4trace:configure.ac:8: -1- AC_SUBST([AQSIS_FLTK_GL_CFLAGS])
 m4trace:configure.ac:8: -1- AC_SUBST([AQSIS_FLTK_GL_LIBS])
-m4trace:configure.ac:66: -1- AC_CONFIG_FILES([Makefile \
+m4trace:configure.ac:89: -1- AC_CONFIG_FILES([Makefile \
 	vs.net/Makefile \
 	\
 	libgasandbox/Makefile \
+	\
+	chap1/Makefile \
+	chap1/ex1/Makefile\
 	\
 	chap2/Makefile \
 	chap2/ex1/Makefile\
@@ -225,13 +228,30 @@ m4trace:configure.ac:66: -1- AC_CONFIG_FILES([Makefile \
 	chap6/Makefile \
 	chap6/ex1/Makefile \
 	chap6/ex2/Makefile \
-	chap6/ex3/Makefile \
 	\
 	chap7/Makefile \
 	chap7/ex1/Makefile \
 	chap7/ex2/Makefile \
 	chap7/ex3/Makefile \
 	chap7/ex4/Makefile \
+	chap7/ex5/Makefile \
+	\
+	chap8/Makefile \
+	\
+	chap10/Makefile \
+	chap10/ex1/Makefile \
+	chap10/ex2/Makefile \
+	chap10/ex3/Makefile \
+	\
+	chap11/Makefile \
+	chap11/ex1/Makefile \
+	chap11/ex2/Makefile \
+	chap11/ex3/Makefile \
+	chap11/ex4/Makefile \
+	chap11/ex5/Makefile \
+	chap11/ex6/Makefile
+	\
+	chap12/Makefile \
 	\
 	solutions/Makefile \
 	\
@@ -243,17 +263,20 @@ m4trace:configure.ac:66: -1- AC_CONFIG_FILES([Makefile \
 	\
 	solutions/chap6/Makefile \
 	solutions/chap6/ex1/Makefile \
-	solutions/chap6/ex3/Makefile \
 	\
 	solutions/chap7/Makefile \
 	solutions/chap7/ex4/Makefile \
+	solutions/chap7/ex5/Makefile \
+	\
+	solutions/chap11/Makefile \
+	solutions/chap11/ex4/Makefile \
 	\
 	solutions/vs.net/Makefile \
 	\
 	attic/Makefile\
 	attic/gaigen2hp/Makefile
 	])
-m4trace:configure.ac:66: -1- _m4_warn([obsolete], [AC_OUTPUT should be used without arguments.
+m4trace:configure.ac:89: -1- _m4_warn([obsolete], [AC_OUTPUT should be used without arguments.
 You should run autoupdate.], [])
-m4trace:configure.ac:66: -1- AC_SUBST([LIB@&t@OBJS], [$ac_libobjs])
-m4trace:configure.ac:66: -1- AC_SUBST([LTLIBOBJS], [$ac_ltlibobjs])
+m4trace:configure.ac:89: -1- AC_SUBST([LIB@&t@OBJS], [$ac_libobjs])
+m4trace:configure.ac:89: -1- AC_SUBST([LTLIBOBJS], [$ac_ltlibobjs])
