--- a/ga_sandbox/attic/gaigen2hp/.deps/glwindow.Po
+++ b/ga_sandbox/attic/gaigen2hp/.deps/glwindow.Po
@@ -88,7 +88,8 @@ glwindow.o glwindow.o: glwindow.cpp /usr/include/stdio.h \
   /usr/lib/gcc-lib/i686-pc-linux-gnu/3.3.5-20050130/include/g++-v3/bits/stl_heap.h \
   /usr/lib/gcc-lib/i686-pc-linux-gnu/3.3.5-20050130/include/g++-v3/bits/stl_tempbuf.h \
   /usr/lib/gcc-lib/i686-pc-linux-gnu/3.3.5-20050130/include/g++-v3/bits/basic_string.tcc \
-  ../../libgasandbox/mvtypebase.h ../../libgasandbox/timing.h glwindow.h \
+  ../../libgasandbox/mvtypebase.h ../../libgasandbox/h3ga.h \
+  ../../libgasandbox/c3ga.h ../../libgasandbox/timing.h glwindow.h \
   /usr/include/fltk-1.1/FL/Fl_Gl_Window.H \
   /usr/include/fltk-1.1/FL/Fl_Window.H \
   /usr/include/fltk-1.1/FL/Fl_Group.H fields.h hpindex.h main.h
@@ -344,6 +345,10 @@ glwindow.o glwindow.o: glwindow.cpp /usr/include/stdio.h \
 /usr/lib/gcc-lib/i686-pc-linux-gnu/3.3.5-20050130/include/g++-v3/bits/basic_string.tcc:
 
 ../../libgasandbox/mvtypebase.h:
+
+../../libgasandbox/h3ga.h:
+
+../../libgasandbox/c3ga.h:
 
 ../../libgasandbox/timing.h:
 
