--- a/ga_sandbox/autom4te.cache/output.3
+++ b/ga_sandbox/autom4te.cache/output.3
@@ -5626,7 +5626,7 @@ else
 echo "${ECHO_T}Warning: couldn't find fltk library" >&6
 fi
 
-                                                                                                                                                                                                                                                                                                                                                                                                                                    ac_config_files="$ac_config_files Makefile vs.net/Makefile libgasandbox/Makefile chap2/Makefile chap2/ex1/Makefile chap2/ex2/Makefile chap2/ex3/Makefile chap3/Makefile chap3/ex1/Makefile chap3/ex2/Makefile chap3/ex3/Makefile chap3/ex4/Makefile chap4/Makefile chap4/ex1/Makefile chap4/ex2/Makefile chap4/ex3/Makefile chap5/Makefile chap5/ex1/Makefile chap5/ex2/Makefile chap5/ex3/Makefile chap6/Makefile chap6/ex1/Makefile chap6/ex2/Makefile chap6/ex3/Makefile chap7/Makefile chap7/ex1/Makefile chap7/ex2/Makefile chap7/ex3/Makefile chap7/ex4/Makefile solutions/Makefile solutions/chap2/Makefile solutions/chap2/ex2/Makefile solutions/chap3/Makefile solutions/chap3/ex2/Makefile solutions/chap6/Makefile solutions/chap6/ex1/Makefile solutions/chap6/ex3/Makefile solutions/chap7/Makefile solutions/chap7/ex4/Makefile solutions/vs.net/Makefile attic/Makefile attic/gaigen2hp/Makefile"
+                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                              ac_config_files="$ac_config_files Makefile vs.net/Makefile libgasandbox/Makefile chap1/Makefile chap1/ex1/Makefile chap2/Makefile chap2/ex1/Makefile chap2/ex2/Makefile chap2/ex3/Makefile chap3/Makefile chap3/ex1/Makefile chap3/ex2/Makefile chap3/ex3/Makefile chap3/ex4/Makefile chap4/Makefile chap4/ex1/Makefile chap4/ex2/Makefile chap4/ex3/Makefile chap5/Makefile chap5/ex1/Makefile chap5/ex2/Makefile chap5/ex3/Makefile chap6/Makefile chap6/ex1/Makefile chap6/ex2/Makefile chap7/Makefile chap7/ex1/Makefile chap7/ex2/Makefile chap7/ex3/Makefile chap7/ex4/Makefile chap7/ex5/Makefile chap8/Makefile chap10/Makefile chap10/ex1/Makefile chap10/ex2/Makefile chap10/ex3/Makefile chap11/Makefile chap11/ex1/Makefile chap11/ex2/Makefile chap11/ex3/Makefile chap11/ex4/Makefile chap11/ex5/Makefile chap11/ex6/Makefile chap12/Makefile solutions/Makefile solutions/chap2/Makefile solutions/chap2/ex2/Makefile solutions/chap3/Makefile solutions/chap3/ex2/Makefile solutions/chap6/Makefile solutions/chap6/ex1/Makefile solutions/chap7/Makefile solutions/chap7/ex4/Makefile solutions/chap7/ex5/Makefile solutions/chap11/Makefile solutions/chap11/ex4/Makefile solutions/vs.net/Makefile attic/Makefile attic/gaigen2hp/Makefile"
 cat >confcache <<\_ACEOF
 # This file is a shell script that caches the results of configure
 # tests run on this system so they can be shared between configure
@@ -6212,6 +6212,8 @@ do
   "Makefile" ) CONFIG_FILES="$CONFIG_FILES Makefile" ;;
   "vs.net/Makefile" ) CONFIG_FILES="$CONFIG_FILES vs.net/Makefile" ;;
   "libgasandbox/Makefile" ) CONFIG_FILES="$CONFIG_FILES libgasandbox/Makefile" ;;
+  "chap1/Makefile" ) CONFIG_FILES="$CONFIG_FILES chap1/Makefile" ;;
+  "chap1/ex1/Makefile" ) CONFIG_FILES="$CONFIG_FILES chap1/ex1/Makefile" ;;
   "chap2/Makefile" ) CONFIG_FILES="$CONFIG_FILES chap2/Makefile" ;;
   "chap2/ex1/Makefile" ) CONFIG_FILES="$CONFIG_FILES chap2/ex1/Makefile" ;;
   "chap2/ex2/Makefile" ) CONFIG_FILES="$CONFIG_FILES chap2/ex2/Makefile" ;;
@@ -6232,12 +6234,25 @@ do
   "chap6/Makefile" ) CONFIG_FILES="$CONFIG_FILES chap6/Makefile" ;;
   "chap6/ex1/Makefile" ) CONFIG_FILES="$CONFIG_FILES chap6/ex1/Makefile" ;;
   "chap6/ex2/Makefile" ) CONFIG_FILES="$CONFIG_FILES chap6/ex2/Makefile" ;;
-  "chap6/ex3/Makefile" ) CONFIG_FILES="$CONFIG_FILES chap6/ex3/Makefile" ;;
   "chap7/Makefile" ) CONFIG_FILES="$CONFIG_FILES chap7/Makefile" ;;
   "chap7/ex1/Makefile" ) CONFIG_FILES="$CONFIG_FILES chap7/ex1/Makefile" ;;
   "chap7/ex2/Makefile" ) CONFIG_FILES="$CONFIG_FILES chap7/ex2/Makefile" ;;
   "chap7/ex3/Makefile" ) CONFIG_FILES="$CONFIG_FILES chap7/ex3/Makefile" ;;
   "chap7/ex4/Makefile" ) CONFIG_FILES="$CONFIG_FILES chap7/ex4/Makefile" ;;
+  "chap7/ex5/Makefile" ) CONFIG_FILES="$CONFIG_FILES chap7/ex5/Makefile" ;;
+  "chap8/Makefile" ) CONFIG_FILES="$CONFIG_FILES chap8/Makefile" ;;
+  "chap10/Makefile" ) CONFIG_FILES="$CONFIG_FILES chap10/Makefile" ;;
+  "chap10/ex1/Makefile" ) CONFIG_FILES="$CONFIG_FILES chap10/ex1/Makefile" ;;
+  "chap10/ex2/Makefile" ) CONFIG_FILES="$CONFIG_FILES chap10/ex2/Makefile" ;;
+  "chap10/ex3/Makefile" ) CONFIG_FILES="$CONFIG_FILES chap10/ex3/Makefile" ;;
+  "chap11/Makefile" ) CONFIG_FILES="$CONFIG_FILES chap11/Makefile" ;;
+  "chap11/ex1/Makefile" ) CONFIG_FILES="$CONFIG_FILES chap11/ex1/Makefile" ;;
+  "chap11/ex2/Makefile" ) CONFIG_FILES="$CONFIG_FILES chap11/ex2/Makefile" ;;
+  "chap11/ex3/Makefile" ) CONFIG_FILES="$CONFIG_FILES chap11/ex3/Makefile" ;;
+  "chap11/ex4/Makefile" ) CONFIG_FILES="$CONFIG_FILES chap11/ex4/Makefile" ;;
+  "chap11/ex5/Makefile" ) CONFIG_FILES="$CONFIG_FILES chap11/ex5/Makefile" ;;
+  "chap11/ex6/Makefile" ) CONFIG_FILES="$CONFIG_FILES chap11/ex6/Makefile" ;;
+  "chap12/Makefile" ) CONFIG_FILES="$CONFIG_FILES chap12/Makefile" ;;
   "solutions/Makefile" ) CONFIG_FILES="$CONFIG_FILES solutions/Makefile" ;;
   "solutions/chap2/Makefile" ) CONFIG_FILES="$CONFIG_FILES solutions/chap2/Makefile" ;;
   "solutions/chap2/ex2/Makefile" ) CONFIG_FILES="$CONFIG_FILES solutions/chap2/ex2/Makefile" ;;
@@ -6245,9 +6260,11 @@ do
   "solutions/chap3/ex2/Makefile" ) CONFIG_FILES="$CONFIG_FILES solutions/chap3/ex2/Makefile" ;;
   "solutions/chap6/Makefile" ) CONFIG_FILES="$CONFIG_FILES solutions/chap6/Makefile" ;;
   "solutions/chap6/ex1/Makefile" ) CONFIG_FILES="$CONFIG_FILES solutions/chap6/ex1/Makefile" ;;
-  "solutions/chap6/ex3/Makefile" ) CONFIG_FILES="$CONFIG_FILES solutions/chap6/ex3/Makefile" ;;
   "solutions/chap7/Makefile" ) CONFIG_FILES="$CONFIG_FILES solutions/chap7/Makefile" ;;
   "solutions/chap7/ex4/Makefile" ) CONFIG_FILES="$CONFIG_FILES solutions/chap7/ex4/Makefile" ;;
+  "solutions/chap7/ex5/Makefile" ) CONFIG_FILES="$CONFIG_FILES solutions/chap7/ex5/Makefile" ;;
+  "solutions/chap11/Makefile" ) CONFIG_FILES="$CONFIG_FILES solutions/chap11/Makefile" ;;
+  "solutions/chap11/ex4/Makefile" ) CONFIG_FILES="$CONFIG_FILES solutions/chap11/ex4/Makefile" ;;
   "solutions/vs.net/Makefile" ) CONFIG_FILES="$CONFIG_FILES solutions/vs.net/Makefile" ;;
   "attic/Makefile" ) CONFIG_FILES="$CONFIG_FILES attic/Makefile" ;;
   "attic/gaigen2hp/Makefile" ) CONFIG_FILES="$CONFIG_FILES attic/gaigen2hp/Makefile" ;;
