--- a/ga_sandbox/autom4te.cache/traces.2
+++ b/ga_sandbox/autom4te.cache/traces.2
@@ -196,8 +196,14 @@ m4trace:configure.ac:8: -1- AC_SUBST([AQSIS_FLTK_CFLAGS])
 m4trace:configure.ac:8: -1- AC_SUBST([AQSIS_FLTK_LIBS])
 m4trace:configure.ac:8: -1- AC_SUBST([AQSIS_FLTK_GL_CFLAGS])
 m4trace:configure.ac:8: -1- AC_SUBST([AQSIS_FLTK_GL_LIBS])
-m4trace:configure.ac:104: -1- AC_CONFIG_FILES([Makefile \
+m4trace:configure.ac:110: -1- AC_CONFIG_FILES([Makefile \
 	vs.net/Makefile \
+	\
+	qhull-2003.1/Makefile \
+	qhull-2003.1/src/Makefile \
+	qhull-2003.1/html/Makefile \
+	qhull-2003.1/eg/Makefile \
+	qhull-2003.1/vs.net/Makefile \
 	\
 	libgasandbox/Makefile \
 	\
@@ -291,7 +297,7 @@ m4trace:configure.ac:104: -1- AC_CONFIG_FILES([Makefile \
 	\
 	screenshots/Makefile
 	])
-m4trace:configure.ac:104: -1- _m4_warn([obsolete], [AC_OUTPUT should be used without arguments.
+m4trace:configure.ac:110: -1- _m4_warn([obsolete], [AC_OUTPUT should be used without arguments.
 You should run autoupdate.], [])
-m4trace:configure.ac:104: -1- AC_SUBST([LIB@&t@OBJS], [$ac_libobjs])
-m4trace:configure.ac:104: -1- AC_SUBST([LTLIBOBJS], [$ac_ltlibobjs])
+m4trace:configure.ac:110: -1- AC_SUBST([LIB@&t@OBJS], [$ac_libobjs])
+m4trace:configure.ac:110: -1- AC_SUBST([LTLIBOBJS], [$ac_ltlibobjs])
