Fixed autotools stuff

--- a/ga_sandbox/autom4te.cache/traces.3
+++ b/ga_sandbox/autom4te.cache/traces.3
@@ -827,7 +827,7 @@ m4trace:configure.ac:8: -1- AC_SUBST([AQSIS_FLTK_CFLAGS])
 m4trace:configure.ac:8: -1- AC_SUBST([AQSIS_FLTK_LIBS])
 m4trace:configure.ac:8: -1- AC_SUBST([AQSIS_FLTK_GL_CFLAGS])
 m4trace:configure.ac:8: -1- AC_SUBST([AQSIS_FLTK_GL_LIBS])
-m4trace:configure.ac:110: -1- AC_CONFIG_FILES([Makefile \
+m4trace:configure.ac:123: -1- AC_CONFIG_FILES([Makefile \
 	vs.net/Makefile \
 	\
 	qhull-2003.1/Makefile \
@@ -898,10 +898,20 @@ m4trace:configure.ac:110: -1- AC_CONFIG_FILES([Makefile \
 	\
 	chap14/Makefile \
 	chap14/ex1/Makefile \
+	chap14/ex2/Makefile \
+	chap14/ex3/Makefile \
+	chap14/ex4/Makefile \
 	\
 	chap15/Makefile \
+	chap15/ex1/Makefile \
+	chap15/ex2/Makefile \
+	chap15/ex3/Makefile \
 	\
 	chap16/Makefile \
+	chap16/ex1/Makefile \
+	chap16/ex2/Makefile \
+	chap16/ex3/Makefile \
+	chap16/ex4/Makefile \
 	\
 	solutions/Makefile \
 	\
@@ -921,6 +931,9 @@ m4trace:configure.ac:110: -1- AC_CONFIG_FILES([Makefile \
 	solutions/chap11/Makefile \
 	solutions/chap11/ex4/Makefile \
 	\
+	solutions/chap14/Makefile \
+	solutions/chap14/ex2/Makefile \
+	\
 	solutions/vs.net/Makefile \
 	\
 	attic/Makefile\
@@ -928,8 +941,8 @@ m4trace:configure.ac:110: -1- AC_CONFIG_FILES([Makefile \
 	\
 	screenshots/Makefile
 	])
-m4trace:configure.ac:110: -1- _m4_warn([obsolete], [AC_OUTPUT should be used without arguments.
+m4trace:configure.ac:123: -1- _m4_warn([obsolete], [AC_OUTPUT should be used without arguments.
 You should run autoupdate.], [])
-m4trace:configure.ac:110: -1- AC_SUBST([LIB@&t@OBJS], [$ac_libobjs])
-m4trace:configure.ac:110: -1- AC_SUBST([LTLIBOBJS], [$ac_ltlibobjs])
-m4trace:configure.ac:110: -1- _AM_OUTPUT_DEPENDENCY_COMMANDS
+m4trace:configure.ac:123: -1- AC_SUBST([LIB@&t@OBJS], [$ac_libobjs])
+m4trace:configure.ac:123: -1- AC_SUBST([LTLIBOBJS], [$ac_ltlibobjs])
+m4trace:configure.ac:123: -1- _AM_OUTPUT_DEPENDENCY_COMMANDS
