Fixed some unix stuff

--- a/ga_sandbox/autom4te.cache/traces.3
+++ b/ga_sandbox/autom4te.cache/traces.3
@@ -827,7 +827,7 @@ m4trace:configure.ac:8: -1- AC_SUBST([AQSIS_FLTK_CFLAGS])
 m4trace:configure.ac:8: -1- AC_SUBST([AQSIS_FLTK_LIBS])
 m4trace:configure.ac:8: -1- AC_SUBST([AQSIS_FLTK_GL_CFLAGS])
 m4trace:configure.ac:8: -1- AC_SUBST([AQSIS_FLTK_GL_LIBS])
-m4trace:configure.ac:126: -1- AC_CONFIG_FILES([Makefile \
+m4trace:configure.ac:127: -1- AC_CONFIG_FILES([Makefile \
 	vs.net/Makefile \
 	\
 	qhull-2003.1/Makefile \
@@ -889,6 +889,7 @@ m4trace:configure.ac:126: -1- AC_CONFIG_FILES([Makefile \
 	chap11/ex6/Makefile
 	\
 	chap12/Makefile \
+	chap12/ex1/Makefile \
 	\
 	chap13/Makefile \
 	chap13/ex1/Makefile \
@@ -944,8 +945,8 @@ m4trace:configure.ac:126: -1- AC_CONFIG_FILES([Makefile \
 	\
 	screenshots/Makefile
 	])
-m4trace:configure.ac:126: -1- _m4_warn([obsolete], [AC_OUTPUT should be used without arguments.
+m4trace:configure.ac:127: -1- _m4_warn([obsolete], [AC_OUTPUT should be used without arguments.
 You should run autoupdate.], [])
-m4trace:configure.ac:126: -1- AC_SUBST([LIB@&t@OBJS], [$ac_libobjs])
-m4trace:configure.ac:126: -1- AC_SUBST([LTLIBOBJS], [$ac_ltlibobjs])
-m4trace:configure.ac:126: -1- _AM_OUTPUT_DEPENDENCY_COMMANDS
+m4trace:configure.ac:127: -1- AC_SUBST([LIB@&t@OBJS], [$ac_libobjs])
+m4trace:configure.ac:127: -1- AC_SUBST([LTLIBOBJS], [$ac_ltlibobjs])
+m4trace:configure.ac:127: -1- _AM_OUTPUT_DEPENDENCY_COMMANDS
