--- a/ga_sandbox/autom4te.cache/output.2
+++ b/ga_sandbox/autom4te.cache/output.2
@@ -5626,7 +5626,7 @@ else
 echo "${ECHO_T}Warning: couldn't find fltk library" >&6
 fi
 
-                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                ac_config_files="$ac_config_files Makefile vs.net/Makefile qhull-2003.1/Makefile qhull-2003.1/src/Makefile qhull-2003.1/html/Makefile qhull-2003.1/eg/Makefile qhull-2003.1/vs.net/Makefile libgasandbox/Makefile chap1/Makefile chap1/ex1/Makefile chap2/Makefile chap2/ex1/Makefile chap2/ex2/Makefile chap2/ex3/Makefile chap3/Makefile chap3/ex1/Makefile chap3/ex2/Makefile chap3/ex3/Makefile chap3/ex4/Makefile chap4/Makefile chap4/ex1/Makefile chap4/ex2/Makefile chap4/ex3/Makefile chap5/Makefile chap5/ex1/Makefile chap5/ex2/Makefile chap5/ex3/Makefile chap6/Makefile chap6/ex1/Makefile chap6/ex2/Makefile chap7/Makefile chap7/ex1/Makefile chap7/ex2/Makefile chap7/ex3/Makefile chap7/ex4/Makefile chap7/ex5/Makefile chap8/Makefile chap10/Makefile chap10/ex1/Makefile chap10/ex2/Makefile chap10/ex3/Makefile chap11/Makefile chap11/ex1/Makefile chap11/ex2/Makefile chap11/ex3/Makefile chap11/ex4/Makefile chap11/ex5/Makefile chap11/ex6/Makefile chap12/Makefile chap13/Makefile chap13/ex1/Makefile chap13/ex2/Makefile chap13/ex3/Makefile chap13/ex4/Makefile chap14/Makefile chap14/ex1/Makefile chap14/ex2/Makefile chap14/ex3/Makefile chap14/ex4/Makefile chap15/Makefile chap15/ex1/Makefile chap15/ex2/Makefile chap15/ex3/Makefile chap16/Makefile chap16/ex1/Makefile chap16/ex2/Makefile chap16/ex3/Makefile chap16/ex4/Makefile solutions/Makefile solutions/chap2/Makefile solutions/chap2/ex2/Makefile solutions/chap3/Makefile solutions/chap3/ex2/Makefile solutions/chap6/Makefile solutions/chap6/ex1/Makefile solutions/chap7/Makefile solutions/chap7/ex4/Makefile solutions/chap7/ex5/Makefile solutions/chap11/Makefile solutions/chap11/ex4/Makefile solutions/chap13/Makefile solutions/chap13/ex2/Makefile solutions/chap14/Makefile solutions/chap14/ex2/Makefile solutions/vs.net/Makefile attic/Makefile attic/gaigen2hp/Makefile screenshots/Makefile"
+                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                          ac_config_files="$ac_config_files Makefile vs.net/Makefile qhull-2003.1/Makefile qhull-2003.1/src/Makefile qhull-2003.1/html/Makefile qhull-2003.1/eg/Makefile qhull-2003.1/vs.net/Makefile libgasandbox/Makefile chap1/Makefile chap1/ex1/Makefile chap2/Makefile chap2/ex1/Makefile chap2/ex2/Makefile chap2/ex3/Makefile chap3/Makefile chap3/ex1/Makefile chap3/ex2/Makefile chap3/ex3/Makefile chap3/ex4/Makefile chap4/Makefile chap4/ex1/Makefile chap4/ex2/Makefile chap4/ex3/Makefile chap5/Makefile chap5/ex1/Makefile chap5/ex2/Makefile chap5/ex3/Makefile chap6/Makefile chap6/ex1/Makefile chap6/ex2/Makefile chap7/Makefile chap7/ex1/Makefile chap7/ex2/Makefile chap7/ex3/Makefile chap7/ex4/Makefile chap7/ex5/Makefile chap8/Makefile chap10/Makefile chap10/ex1/Makefile chap10/ex2/Makefile chap10/ex3/Makefile chap11/Makefile chap11/ex1/Makefile chap11/ex2/Makefile chap11/ex3/Makefile chap11/ex4/Makefile chap11/ex5/Makefile chap11/ex6/Makefile chap12/Makefile chap12/ex1/Makefile chap13/Makefile chap13/ex1/Makefile chap13/ex2/Makefile chap13/ex3/Makefile chap13/ex4/Makefile chap14/Makefile chap14/ex1/Makefile chap14/ex2/Makefile chap14/ex3/Makefile chap14/ex4/Makefile chap15/Makefile chap15/ex1/Makefile chap15/ex2/Makefile chap15/ex3/Makefile chap16/Makefile chap16/ex1/Makefile chap16/ex2/Makefile chap16/ex3/Makefile chap16/ex4/Makefile solutions/Makefile solutions/chap2/Makefile solutions/chap2/ex2/Makefile solutions/chap3/Makefile solutions/chap3/ex2/Makefile solutions/chap6/Makefile solutions/chap6/ex1/Makefile solutions/chap7/Makefile solutions/chap7/ex4/Makefile solutions/chap7/ex5/Makefile solutions/chap11/Makefile solutions/chap11/ex4/Makefile solutions/chap13/Makefile solutions/chap13/ex2/Makefile solutions/chap14/Makefile solutions/chap14/ex2/Makefile solutions/vs.net/Makefile attic/Makefile attic/gaigen2hp/Makefile screenshots/Makefile"
 cat >confcache <<\_ACEOF
 # This file is a shell script that caches the results of configure
 # tests run on this system so they can be shared between configure
@@ -6258,6 +6258,7 @@ do
   "chap11/ex5/Makefile" ) CONFIG_FILES="$CONFIG_FILES chap11/ex5/Makefile" ;;
   "chap11/ex6/Makefile" ) CONFIG_FILES="$CONFIG_FILES chap11/ex6/Makefile" ;;
   "chap12/Makefile" ) CONFIG_FILES="$CONFIG_FILES chap12/Makefile" ;;
+  "chap12/ex1/Makefile" ) CONFIG_FILES="$CONFIG_FILES chap12/ex1/Makefile" ;;
   "chap13/Makefile" ) CONFIG_FILES="$CONFIG_FILES chap13/Makefile" ;;
   "chap13/ex1/Makefile" ) CONFIG_FILES="$CONFIG_FILES chap13/ex1/Makefile" ;;
   "chap13/ex2/Makefile" ) CONFIG_FILES="$CONFIG_FILES chap13/ex2/Makefile" ;;
