--- a/ga_sandbox/README
+++ b/ga_sandbox/README
@@ -1,2 +1,8 @@
-This is the sample code for the book
-Geometric Algebra, for properly oriented people.
+This is the sample source code for the book
+Geometric Algebra for Computer Science
+An Object Oriented Approach to Geometry.
+
+See 
+http://www.geometricalgebra.net
+and
+http://sourceforge.net/projects/gasandbox/
