--- a/ga_sandbox/ChangeLog
+++ b/ga_sandbox/ChangeLog
@@ -1,3 +1,4 @@
+20080812 Added Visual Studio 2008 project files
 20080811 Recreated all Visual Studio 2005 project files, in preparation for VS2008 project files
 
 20080324 Added warning for Intel graphics chipsets to all examples
